Added post route

--- a/views/index.html
+++ b/views/index.html
@@ -12,7 +12,21 @@
       100 followers
     </div>
     <div class="col-md-9">
-    
+
+      <!-- Form -->
+      <br>
+      {% if showForm %}
+        <form action="/tweets" method="POST">
+          <label for="name_field">Name:</label>
+          <input name="name" type="text" id="name_field" value="{{name}}"/>
+
+          <label for="text_field">Text:</label>
+          <input name="text" type="text" id="text_field" style="width: 350px;" />
+
+          <input type="submit" value="Submit" />
+        </form>
+      {% endif %}
+
       <!-- display tweets here -->
       {% for tweet in tweets %}
         <li>
@@ -22,7 +36,7 @@
         	<br>
        	</li>
       {% endfor %}
-      
+      <br>
     </div>
   </div>
     
