--- a/views/index.html
+++ b/views/index.html
@@ -18,7 +18,7 @@
       {% if showForm %}
         <form action="/tweets" method="POST">
           <label for="name_field">Name:</label>
-          <input name="name" type="text" id="name_field" value="{{name}}"/>
+          <input name="name" type="text" id="name_field" value="{{tw.name}}"/>
 
           <label for="text_field">Text:</label>
           <input name="text" type="text" id="text_field" style="width: 350px;" />
