--- a/views/layout.html
+++ b/views/layout.html
@@ -48,7 +48,7 @@
             <ul class="nav navbar-nav navbar-right">
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Settings <b class="caret"></b></a>
-                <ul class="dropdown-menu unstyled">
+                <ul class="dropdown-menu">
                   <li><a href="#">Action</a></li>
                   <li><a href="#">Another action</a></li>
                   <li><a href="#">Something else here</a></li>
@@ -60,7 +60,7 @@
       </div>
 
       <!-- Begin page content -->
-      <div class="container">
+      <div class="container" id="tweet-list">
         {% block content %}Welcome to Twitter.js{% endblock %}
       </div> <!-- end container -->
       
@@ -78,5 +78,30 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+      // Load the socket.io library above, then connect to the server.
+      // Because the socket.io server is being run on the same server as your 
+      // Express instance, you can connect() without any arguments.
+      var socket = io.connect();
+      socket.on('connect', function(){
+        console.log('connected to server via WebSockets!');
+      });
+      // When 'new_tweet' events are fired, do something with the packaged tweet
+      socket.on('new_tweet', function (tweet) { 
+
+        console.log(tweet);
+
+        var tweetList = document.getElementById('tweet-list');
+        var newTweetLi = document.createElement("li");
+
+        tweetList.appendChild(newTweetLi);
+        
+        
+      }); 
+    </script>
+
   </body>
+
 </html>
